@@ -1,0 +1,22 @@
+/* XPM */
+static char * delete_xpm[] = {
+"16 16 3 1",
+" 	c None",
+".	c #000000",
+"+	c #FFFFFF",
+"                ",
+"                ",
+"                ",
+" ..........     ",
+" .++....++..    ",
+" .+++..+++...   ",
+" ..++++++.....  ",
+" ...++++....... ",
+" ...++++....... ",
+" ..++++++.....  ",
+" .+++..+++...   ",
+" .++....++..    ",
+" ..........     ",
+"                ",
+"                ",
+"                "};
