@@ -2,6 +2,7 @@ Aug 07, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - add script install button
 - add multiple sort modes per column (#1253101)
 - fix compiler warnings
+- add delete button for quickfilter
 
 Aug 01, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - add demo script
